Fix the scrollbar issue on the GraphSandbox + a couple more UI improvements (adjust the sandbox to the viewport, and some styling)
Bug: T127010

--- a/styles/jquery.splitter.css
+++ b/styles/jquery.splitter.css
@@ -55,3 +55,16 @@
   bottom: 0;
   z-index: 1000;
 }
+
+
+#mw-graph-right .top_panel {
+	overflow: hidden;
+}
+#mw-graph-log, #mw-graph-json {
+	margin: 0;
+	position: absolute;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+}
